mi cambio 3 home

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
     <title>Hogar Menacho</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
             <img src="img/laptopsanuncio.jpg" class="imagen">
         </div>
         <div class="contenido-nosotros">
-            <h1>Descubre los mejores laptops</h1>
+            <h1>Descubre las mejores laptops</h1>
             <p>Descubre la computadora ideal para ti. Disfruta de la portabilidad y versatilidad que te brindan las laptops y notebook  con la calidad y garantía de siempre.</p>
         </div>
     </section>
@@ -106,7 +106,7 @@
         <div class="contenedor">
             <div class="widget">
                 <h3>Contacto</h3>
-                <p>Somos una empresa digital en Abancay </p>
+                <p>Whatsapp 940236290 /</p>
             </div>
             <div class="widget navegacion">
                 <h3>Navegación</h3>
