--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div><!--.card-->
             </div><!--.casa-->
             <div class="anuncio">
-                <img src="img/laptoppromo2.webp">
+                <img src="img/laptoppromo2.webp" class="hero-img__decorator">
                 <!-- <div class="card">
                     <h3 class="titulo">Casa 2</h3>
                     <p class="descripcion"> Etiam turpis mauris, sollicitudin nec nunc ut.</p>
@@ -101,7 +101,9 @@
             </div><!--.casa-->
         </div> <!--.venta-->
     </section>
-
+    <figure class="wave">
+        <img src="./img/wave.svg" alt="Wave" class="wave__img" />
+      </figure>
     <footer class="footer">
         <div class="contenedor">
             <div class="widget">
@@ -128,5 +130,12 @@
 
         <p class="copyright">Derechos Reservados Hogar Menacho 2022</p>
     </footer>
+   
+              </a>
+              Todos los derechos reservados.
+            </h2>
+          </div>
+        </nav>
+      </footer>
 </body>
 </html>
